# GENAI-releases

./: .gitattributes  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/generation/: GenerationPanel.tsx  ImagePreview.tsx
src/components/layout/: AnimatedNavBar.tsx  AuthGuard.tsx  HistoryPanel.tsx  Sidebar.tsx  ThreeColumnLayout.tsx  TitleBar.tsx  UpdateBanner.tsx
src/components/llm-rp/: CharacterSheet.tsx  JsonImportExport.tsx  PersonaList.tsx  PromptLibrary.tsx  SystemPromptEditor.tsx  WorldSettingPanel.tsx
src/components/prompt/: FragmentPicker.tsx
src/components/scene/: PresetManager.tsx  SceneCard.tsx
src/components/tools/: CanvasMaskEditor.tsx  ImageDropZone.tsx  ResultPanel.tsx
src/hooks/: useSceneGeneration.ts  useShortcuts.ts  useUpdateChecker.ts
src/i18n/: index.ts
src/lib/: cn.ts
src/pages/: LLMRPMode.tsx  Library.tsx  MainMode.tsx  SceneDetail.tsx  SceneMode.tsx  Settings.tsx  ToolsMode.tsx  WebView.tsx
src/services/: gemini-service.ts  llm-rp-service.ts  novelai-api.ts  smart-tools.ts
src/stores/: auth-store.ts  fragment-store.ts  generation-store.ts  layout-store.ts  library-store.ts  llm-rp-store.ts  preset-store.ts  scene-store.ts  settings-store.ts  theme-store.ts  tools-store.ts  update-store.ts
src/styles/: globals.css
(+6 files in other folders)
